<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Light Controller</string>
    <string name="gloabl">Global</string>
    <string name="Zone1">Zone 1</string>
    <string name="Zone2">Zone 2</string>
    <string name="Zone3">Zone 3</string>
    <string name="Zone4">Zone 4</string>
    <string name="action_settings">Settings</string>
    <string name="cat_head">Control Unit Preferences</string>
    <string name="ip_head">Controller IP</string>
    <string name="ip_summary">IP of the light control unit</string>
    <string name="ip_invalid_error">IP: %1$s invalid, reverting to %2$s</string>
    <string name="port_head">Controller Port</string>
    <string name="port_summary">Port for the light control unit (Default 8899) only change if you need to</string>
    <string name="cat_zones_head">Zone Setup</string>
    <string name="pref_zone_1">Zone 1 Name</string>
    <string name="pref_zone_2">Zone 2 Name</string>
    <string name="pref_zone_3">Zone 3 Name</string>
    <string name="pref_zone_4">Zone 4 Name</string>

</resources>
