<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="-2dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="@string/gloabl"
            android:id="@+id/button"
            android:layout_weight="1"
            android:background="@drawable/tab_selected"
            android:lines="1"
            android:singleLine="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="@string/Zone1"
            android:id="@+id/button2"
            android:layout_weight="1"
            android:background="@drawable/tab_unselected"
            android:singleLine="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="@string/Zone2"
            android:id="@+id/button3"
            android:layout_weight="1"
            android:background="@drawable/tab_unselected"
            android:singleLine="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="@string/Zone3"
            android:id="@+id/button4"
            android:layout_weight="1"
            android:background="@drawable/tab_unselected"
            android:singleLine="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="@string/Zone4"
            android:id="@+id/button5"
            android:layout_weight="1"
            android:background="@drawable/tab_unselected"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="I"
            android:id="@+id/button6"
            android:singleLine="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="White"
            android:id="@+id/white"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp" />

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="O"
            android:id="@+id/button7" />
    </LinearLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:max="30"
        android:progress="30" />

</LinearLayout>